2008-08-05  Andreas Faerber  <andreas.faerber@web.de>

	* autogen.sh: Suppress arguments warning for NOCONFIGURE.
	
	Contributed under MIT/X11 license.

2008-08-04  Bill Holmes  <billholmes54@gmail.com>

	* test/tests.h, test/Makefile.am, test/memory.c : Adding memory tests to test
	  allocation routines return NULL when 0 size is passed in.

	Contributed under MIT/X11 license.

2008-08-04  Bill Holmes  <billholmes54@gmail.com>

	* src/glib.h : Changing the allocation routines to return null if 0 size is
	  passed in.

	Contributed under MIT/X11 license.

2008-06-16  Zoltan Varga  <vargaz@gmail.com>

	* src/vasprintf.c (vasprintf): Applied patch from Michail Ushakov 
	<migelU@gmail.com>. Workaround broken vsnprintf on windows. Fixes
	#400445.

2008-06-11  Zoltan Varga  <vargaz@gmail.com>

	* src/goutput.c (g_log): Remove unnecessary and incorrect call to 
	g_strdup_printf (). Fixes #398918.

2008-05-01  Bill Holmes  <billholmes54@gmail.com>

	* src/glib.h : Adding declarations for g_ucs4_to_utf16 and g_utf16_to_ucs4.

	* src/gutf8.c : Adding implementation for g_ucs4_to_utf16 and g_utf16_to_ucs4.

	* test/utf8.c Adding tests for g_ucs4_to_utf16 and g_utf16_to_ucs4.

	Contributed under MIT/X11 license.

2008-04-20  Geoff Norton  <gnorton@novell.com>

	* src/gspan.c: Fix the _NSGetEnviron define to prevent an impropoer
	pointer dereference.

2008-03-19  Bill Holmes  <billholmes54@gmail.com>

	* src/gpath.c (g_path_is_absolute) : Adding a case for '/'
	  on Windows.
	
	* src/gpath.c (g_get_user_name) : On Windows add a check for %USERNAME%
	  when %USER% fails.

	* src/gstr.c (g_strsplit, g_strsplit_set):  Change to remove truncation
	  errors with MSVC build.

	* src/gstr.c (g_filename_to_uri, g_filename_from_uri):  Fixes to handle
	  Windows paths.

	* src/gstr.c (g_ascii_strncasecmp):  Convert each character to lower case
	  before comparing.

	* src/gunicode.c (g_get_charset):  Implement for Windows.

	Contributed under MIT/X11 license.
